@@ -1,3 +1,9 @@
+Thu Mar 17 08:12:47 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * TAO_IDL/be/be_codegen.cpp:
+        * TAO_IDL/be/be_interface.cpp:
+          Fixes due to ACE rand_r() changes.
+
 Wed Mar 16 06:27:59 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * orbsvcs/orbsvcs/LoadBalancing/LB_Random.cpp:
